// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThumbnailWidget snapshots snapshots: renders as expected where thumbnail uploads are allowed 1`] = `
<injectIntl(ShimmedIntlComponent)
  subtitle="Unavailable"
  title="Thumbnail"
>
  <Alert
    variant="info"
  >
    <FormattedMessage
      defaultMessage="Select a video from your library to enable this feature"
      description="Message for unavailable thumbnail widget"
      id="authoring.videoeditor.thumbnail.unavailable.message"
    />
  </Alert>
  <Stack
    direction="horizontal"
    gap={3}
  >
    <Image
      alt="Image used as thumbnail for video"
      src="sOMeUrl"
    />
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`ThumbnailWidget snapshots snapshots: renders as expected where videoType equals edxVideo 1`] = `
<injectIntl(ShimmedIntlComponent)
  subtitle={null}
  title="Thumbnail"
>
  <Stack
    direction="horizontal"
    gap={3}
  >
    <Image
      alt="Image used as thumbnail for video"
      src="sOMeUrl"
    />
    <OverLayTrigger
      key="top"
      overlay={
        <ToolTip>
          <FormattedMessage
            defaultMessage="Delete"
            description="Message presented to user for action to delete thumbnail"
            id="authoring.videoeditor.thumbnail.deleteThumbnail"
          />
        </ToolTip>
      }
      placement="top"
    >
      <IconButton
        className="d-inline-block"
        iconAs="Icon"
        onClick={[Function]}
      />
    </OverLayTrigger>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`ThumbnailWidget snapshots snapshots: renders as expected with a thumbnail provided 1`] = `
<injectIntl(ShimmedIntlComponent)
  subtitle={null}
  title="Thumbnail"
>
  <Stack
    direction="horizontal"
    gap={3}
  >
    <Image
      alt="Image used as thumbnail for video"
      src="sOMeUrl"
    />
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`ThumbnailWidget snapshots snapshots: renders as expected with default props 1`] = `
<injectIntl(ShimmedIntlComponent)
  subtitle="Unavailable"
  title="Thumbnail"
>
  <Alert
    variant="info"
  >
    <FormattedMessage
      defaultMessage="Select a video from your library to enable this feature"
      description="Message for unavailable thumbnail widget"
      id="authoring.videoeditor.thumbnail.unavailable.message"
    />
  </Alert>
  <Stack
    gap={3}
  >
    <div>
      <FormattedMessage
        defaultMessage="Upload an image for learners to see before playing the video."
        description="Message for adding thumbnail"
        id="authoring.videoeditor.thumbnail.upload.message"
      />
    </div>
    <div
      style={
        Object {
          "color": "grey",
        }
      }
    >
      <FormattedMessage
        defaultMessage="Images must have an aspect ratio of 16:9 (1280x720 px recommended)"
        description="Message for thumbnail aspectRequirements"
        id="authoring.videoeditor.thumbnail.upload.aspectRequirements"
      />
    </div>
    <FileInput
      acceptedFiles=".gif,.jpg,.jpeg,.png,.bmp"
      fileInput={
        Object {
          "addFile": [Function],
          "click": [Function],
          "ref": Object {
            "current": undefined,
          },
        }
      }
    />
    <Button
      disabled={true}
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        defaultMessage="Upload Thumbnail"
        description="Label for upload button"
        id="authoring.videoeditor.thumbnail.upload.label"
      />
    </Button>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;
